<?xml version="1.0"?>
<package>
  <name>nw_mico</name>
  <version>0.0.1</version>
  <description>
    3D model of the Kinova Mico arm as maintained by Northwestern. Includes the model 
    and URDF files for working with the arm in RViz or Gazebo.
  </description>
  <maintainer email="alexsbroad@gmail.com">Alex Broad (Northwestern)</maintainer>
  <author>alexsbroad</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/jaco_model</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>


